<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_primary"
    android:paddingTop="25dp"
    android:paddingHorizontal="30dp"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulletin_news"
            style="@style/SemiBold18Sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_person_24"
            android:backgroundTint="@color/dark_accent"
            android:contentDescription="@string/avatar_icon" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday_august_2th"
        style="@style/Regular12Sp"
        android:textColor="@color/light_disabled"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wellcome_back_njennifer"
        style="@style/SemiBold18Sp"
        android:layout_marginTop="14dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_is_error_when_fetching_api"
                style="@style/Medium14Sp"
                android:textColor="@color/red_accent"
                android:visibility="gone"
                android:layout_marginTop="25dp" />

            <ProgressBar
                android:id="@+id/progressLoading"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHorizontalNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-30dp"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just_for_you"
                style="@style/SemiBold18Sp"
                android:layout_marginTop="25dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/item_vertical"/>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>